Refactor all classes removing unused code and other details.