@@ -7,6 +7,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Configuration for Cross-Origin Resource Sharing (CORS).
@@ -36,7 +37,7 @@ public class CorsConfig {
         ));
         
         // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         
         // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
